Hide the "Prequel" section on Firefox Flicks home page (Bug 704640)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@98783 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/firefoxflicks.css
+++ b/style/covehead/firefoxflicks.css
@@ -738,6 +738,10 @@ a.download-link span {
 /* }}} */
 /* {{{ Previous Videos */
 
+#prequel {
+    display: none;
+}
+
 #prequel:after {
     visibility: hidden;
     display: block;
